# augmented_mapping

./: README.md  empty.md
augmented_mapping/ros2_ws/src/perception/: setup.py
augmented_mapping/ros2_ws/src/velocity_control/: README.md
augmented_mapping/src/image/: package.xml  setup.py
augmented_mapping/src/image/image/: image_bbox_node.py  image_pc_node.py  image_pc_node_past.py  image_save.py
augmented_mapping/src/perception/: package.xml  setup.py
augmented_mapping/src/perception/launch/: perception_launch.py
augmented_mapping/src/perception/perception/: perception_node.py
augmented_mapping/src/position_control/: package.xml  setup.py
augmented_mapping/src/position_control/position_control/: position_control.py  position_control_sm.py
augmented_mapping/src/rtabmap_package/: CMakeLists.txt  package.xml
augmented_mapping/src/rtabmap_package/launch/: rtabmap_launch.py  rtabmap_odom_launch.py
augmented_mapping/src/state_machine/: package.xml  setup.py
augmented_mapping/src/state_machine/state_machine/: state_machine.py
augmented_mapping/src/velocity_control/: package.xml  setup.cfg  setup.py
augmented_mapping/src/velocity_control/velocity_control/: velocity_bbox_control.py  velocity_control.py  velocity_fuel_control.py  velocity_manual_control.py
docker/: README.md
docker/fast_planner_docker/: dockerfile
docker/fuel_docker/: Dockerfile
docker/rtabmap_docker/: dockerfile
